# Gtopia

./: Cargo.toml  meson.build
build-aux/: cargo.sh
build-aux/meson/: postinstall.py
data/: dev.sp1rit.Gtopia.desktop.in  gtopia.gresource.xml  meson.build  utopia.scss
data/ui/: card.ui  detail.ui  grid.ui  integration_item.ui  window.ui
src/: application.rs  detail.rs  integration_item.rs  main.rs  meson.build  utopia.rs
src/grid/: card.rs  mod.rs
src/preferences/: mod.rs
src/uev/: mod.rs  stream.rs
