[package]
name = "µtopia"
version = "0.1.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
once_cell = "1.7"
utopia-common = { path = "../../core/µCore/utopia-common" }
serde_json = "1.0"
futures = "0.3"
tokio = {version = "1.6", features=["rt", "rt-multi-thread", "net", "sync", "signal", "io-util", "macros", "time"]}

[dependencies.image]
version = "0.23"
features = ["gif"]

[dependencies.gtk]
git = "git://github.com/gtk-rs/gtk4-rs.git"
package ="gtk4"

[dependencies.libadwaita]
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
